expose update API in rest (manually)